--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.6.10",
     "animate.css": "^4.1.1",
+    "framer-motion": "^11.15.0",
     "lucide-react": "^0.469.0",
     "next": "14.2.15",
     "react": "^18",
