--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "animate.css": "^4.1.1",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.469.0",
-    "next": "14.2.15",
+    "next": "^14.2.23",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.4.0",
     "react-slick": "^0.30.3",
+    "sharp": "^0.33.5",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
