--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nextui-org/react": "^2.6.10",
     "animate.css": "^4.1.1",
+    "embla-carousel-react": "^8.5.2",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.469.0",
     "next": "^14.2.23",
@@ -19,7 +20,7 @@
     "react-icons": "^5.4.0",
     "react-slick": "^0.30.3",
     "sharp": "^0.33.5",
-    "slick-carousel": "^1.8.1"
+    "slick-slider": "^1.8.2"
   },
   "devDependencies": {
     "daisyui": "^4.12.23",
