--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.6.10",
+    "@react-hook/intersection-observer": "^3.1.2",
     "animate.css": "^4.1.1",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.469.0",
     "next": "^14.2.23",
     "react": "^18",
+    "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-icons": "^5.4.0",
     "react-slick": "^0.30.3",
     "sharp": "^0.33.5",
+    "slick-carousel": "^1.8.1",
     "slick-slider": "^1.8.2"
   },
   "devDependencies": {
