--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "animate.css": "^4.1.1",
     "aos": "^3.0.0-beta.6",
     "embla-carousel-react": "^8.5.2",
+    "file-loader": "^6.2.0",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.469.0",
     "next": "^14.2.23",
