--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-hook/intersection-observer": "^3.1.2",
     "@react-three/drei": "^9.121.3",
     "@react-three/fiber": "^8.17.12",
+    "@uploadthing/react": "^7.1.5",
     "animate.css": "^4.1.1",
     "aos": "^3.0.0-beta.6",
     "embla-carousel-react": "^8.5.2",
@@ -28,7 +29,8 @@
     "sharp": "^0.33.5",
     "slick-carousel": "^1.8.1",
     "slick-slider": "^1.8.2",
-    "three": "^0.172.0"
+    "three": "^0.172.0",
+    "uploadthing": "^7.4.4"
   },
   "devDependencies": {
     "daisyui": "^4.12.23",
