--- a/package.json
+++ b/package.json
@@ -13,15 +13,19 @@
       "@react-hook/intersection-observer": "^3.1.2",
       "@react-three/drei": "^9.121.3",
       "@react-three/fiber": "^8.17.12",
+      "@uiw/react-md-editor": "^4.0.5",
       "@uploadthing/react": "^7.1.5",
       "animate.css": "^4.1.1",
       "aos": "^3.0.0-beta.6",
+      "chart.js": "^4.4.8",
       "embla-carousel-react": "^8.5.2",
       "file-loader": "^6.2.0",
       "framer-motion": "^11.15.0",
       "lucide-react": "^0.469.0",
       "next": "^14.2.15",
+      "next-cloudinary": "^6.16.0",
       "react": "^18",
+      "react-chartjs-2": "^5.3.0",
       "react-countup": "^6.5.3",
       "react-dom": "^18",
       "react-icons": "^5.4.0",
