--- a/.env
+++ b/.env
@@ -8,3 +8,6 @@ NEXT_PUBLIC_LOGO_API_URL="https://subhan-admin.vercel.app"
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dr0vskm6n
 CLOUDINARY_API_KEY=878521636266355
 CLOUDINARY_API_SECRET=iLdpd0XL0Iit6UFonKKLvNKRpLo
+
+
+MONGODB_URI=mongodb+srv://salman248shah:salman248shah@cluster0.qpbmo.mongodb.net/daryaft
